--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sprint-tracker",
+  "name": "gift-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.5",
